[package]

name = "cargo-bot"
version = "0.1.1"
authors = ["seb <seb@ukr.net>"]

[profile.dev]
    opt-level = 0  		# Controls the --opt-level the compiler builds with
    debug = true   		# Controls whether the compiler passes -g or `--cfg ndebug`
    rpath = false  		# Controls whether the compiler passes `-C rpath`
    lto = false    		# Controls `-C lto` for binaries and staticlibs
    debug-assertions = true  	# Controls whether debug assertions are enabled

[profile.release]
    opt-level = 3
    debug = false
    rpath = false
    lto = false
    debug-assertions = false

[lib]
name = "lib"
path = "src/lib/lib.rs"


[[bin]]
name = "cargo-bot"
path = "src/main.rs"

[dependencies]
rustc-serialize = "*"
